--- a/src/sdk/Euclid.Composites/Euclid.Composites.csproj
+++ b/src/sdk/Euclid.Composites/Euclid.Composites.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Extensions\AgentResolversExtensions.cs" />
     <Compile Include="InvalidConfigurationException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValueConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\Euclid.Common.Storage.NHibernate\Euclid.Common.Storage.NHibernate.csproj">
