add vsdoc comments to euclid-0.9.js, refactored the QueryModule file for consistency

--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -44,6 +44,7 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\..\..\packages\Castle.Windsor.2.5.4\lib\net40-client\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="JsonCompositeInspector, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="Nancy">
       <HintPath>..\..\..\packages\Nancy.0.9.0\lib\net40\Nancy.dll</HintPath>
     </Reference>
@@ -71,7 +72,6 @@
   <ItemGroup>
     <Compile Include="Models\LogModel.cs" />
     <Compile Include="Module\AssetModule.cs" />
-    <Compile Include="CommandNotFoundInRegistryException.cs" />
     <Compile Include="Module\LogModule.cs" />
     <Compile Include="CompositeInspectorBootstrapper.cs" />
     <Compile Include="Models\AgentModel.cs" />
