Update web.config with hosts app settings

--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -65,6 +65,9 @@
 			<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
 		</handlers>
 	</system.webServer>
+	<appSettings>
+		<add key="Hosts" value="http://localhost;http://127.0.0.1;"/>
+	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
