--- a/apps/AdminComposite/Config/sparrow.custom.config
+++ b/apps/AdminComposite/Config/sparrow.custom.config
@@ -6,6 +6,9 @@
   <connectionStrings>
     <add name="forum-db" connectionString="Data Source=.;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
   </connectionStrings>
+	<appSettings>
+		<add key="Hosts" value="http://localhost;http://127.0.0.1;http://jason-mbp;http://wut-wut"/>
+	</appSettings>
   <log4net>
     <root>
       <priority value="INFO" />
