updated appSetting name

--- a/apps/AdminComposite/Config/jason-mbp.custom.config
+++ b/apps/AdminComposite/Config/jason-mbp.custom.config
@@ -7,7 +7,7 @@
 		<add name="forum-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 	</connectionStrings>
 	<appSettings>
-		<add key="Hosts" value="http://localhost;http://127.0.0.1;http://jason-mbp;http://wut-wut"/>
+		<add key="AdminComposite.AvailableHosts" value="http://localhost;http://127.0.0.1;http://jason-mbp;http://wut-wut"/>
 	</appSettings>
   <log4net>
 	<root>
