--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -25,6 +25,7 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
 		<add key="log4net.Internal.Debug" value="false" />
+		<add key="AdminComposite.AvailableHosts" value="http://localhost;http://127.0.0.1;"/>
 	</appSettings>
 	<system.web>
 		<customErrors mode="Off"/>
@@ -65,9 +66,6 @@
 			<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
 		</handlers>
 	</system.webServer>
-	<appSettings>
-		<add key="Hosts" value="http://localhost;http://127.0.0.1;"/>
-	</appSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
