--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -144,6 +144,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\DynamicAdmin\assets\scripts\backbone-min.js" />
+    <Content Include="Areas\DynamicAdmin\assets\scripts\handlebars-1.0.0.beta.6.js" />
     <Content Include="Content\block-user-icon.png" />
     <Content Include="Content\broom.png" />
     <Content Include="Content\chromatron\css\jquery.nyromodal.css" />
@@ -168,6 +170,8 @@
     <Content Include="Content\logo_3.jpg" />
     <Content Include="Content\logo_3.png" />
     <Content Include="Content\admin-ui.js" />
+    <Compile Include="Areas\DynamicAdmin\Controllers\ShellController.cs" />
+    <Compile Include="Areas\DynamicAdmin\DynamicAdminAreaRegistration.cs" />
     <Compile Include="Areas\Forum\ForumAreaRegistration.cs" />
     <Compile Include="CommonAdminInfo.cs" />
     <Compile Include="Controllers\AdminController.cs" />
@@ -680,11 +684,21 @@
     <Content Include="Areas\Forum\Views\ProfanityFilter\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Areas\DynamicAdmin\Models\" />
     <Folder Include="Areas\Forum\ViewModels\" />
     <Folder Include="Areas\Forum\Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Forum\Views\_ViewStart.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\DynamicAdmin\Views\Web.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\DynamicAdmin\Views\Shell\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\DynamicAdmin\Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
