--- a/apps/StorefrontAdminComposite/StorefrontAdminComposite.csproj
+++ b/apps/StorefrontAdminComposite/StorefrontAdminComposite.csproj
@@ -174,6 +174,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\js\storefrontadmin.js" />
+    <None Include="Content\app\templates\company\Employees.handlebars" />
+    <None Include="Content\app\templates\company\Financials.handlebars" />
     <Content Include="Global.asax" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -186,6 +188,14 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <None Include="Content\app\templates\company\AllTransactions.handlebars" />
+    <None Include="Content\app\templates\partials\inputModel\StringProperty.handlebars" />
+    <None Include="Content\app\templates\store\DiscountCodes.handlebars" />
+    <None Include="Content\app\templates\store\Promotions.handlebars" />
+    <None Include="Content\app\templates\store\ProductCatalog.handlebars" />
+    <None Include="Content\app\templates\store\Customers.handlebars" />
+    <None Include="Content\app\templates\store\Orders.handlebars" />
+    <None Include="Content\app\templates\store\Financials.handlebars" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
