basic integration with sammy.js

--- a/apps/StorefrontAdminComposite/StorefrontAdminComposite.csproj
+++ b/apps/StorefrontAdminComposite/StorefrontAdminComposite.csproj
@@ -177,6 +177,78 @@
     <Content Include="Content\js\app.js" />
     <None Include="Content\app\templates\company\Employees.handlebars" />
     <None Include="Content\app\templates\company\Financials.handlebars" />
+    <Content Include="Content\js\lib\min\plugins\sammy.cache-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.cache-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.data_location_proxy-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.data_location_proxy-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.ejs-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.ejs-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.exceptional-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.exceptional-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.flash-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.flash-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.form-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.form-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.form_2_json-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.form_2_json-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.googleanalytics-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.googleanalytics-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.haml-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.haml-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.handlebars-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.handlebars-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.hoptoad-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.hoptoad-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.json-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.json-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.meld-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.meld-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.mustache-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.mustache-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.nested_params-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.nested_params-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.oauth2-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.oauth2-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.path_location_proxy-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.path_location_proxy-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.pure-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.pure-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.push_location_proxy-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.push_location_proxy-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.storage-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.storage-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.template-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.template-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.title-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.title-latest.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.tmpl-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\plugins\sammy.tmpl-latest.min.js" />
+    <Content Include="Content\js\lib\min\sammy-0.7.1.min.js" />
+    <Content Include="Content\js\lib\min\sammy-latest.min.js" />
+    <Content Include="Content\js\lib\plugins\sammy.cache.js" />
+    <Content Include="Content\js\lib\plugins\sammy.data_location_proxy.js" />
+    <Content Include="Content\js\lib\plugins\sammy.ejs.js" />
+    <Content Include="Content\js\lib\plugins\sammy.exceptional.js" />
+    <Content Include="Content\js\lib\plugins\sammy.flash.js" />
+    <Content Include="Content\js\lib\plugins\sammy.form.js" />
+    <Content Include="Content\js\lib\plugins\sammy.form_2_json.js" />
+    <Content Include="Content\js\lib\plugins\sammy.googleanalytics.js" />
+    <Content Include="Content\js\lib\plugins\sammy.haml.js" />
+    <Content Include="Content\js\lib\plugins\sammy.handlebars.js" />
+    <Content Include="Content\js\lib\plugins\sammy.hoptoad.js" />
+    <Content Include="Content\js\lib\plugins\sammy.json.js" />
+    <Content Include="Content\js\lib\plugins\sammy.meld.js" />
+    <Content Include="Content\js\lib\plugins\sammy.mustache.js" />
+    <Content Include="Content\js\lib\plugins\sammy.nested_params.js" />
+    <Content Include="Content\js\lib\plugins\sammy.oauth2.js" />
+    <Content Include="Content\js\lib\plugins\sammy.path_location_proxy.js" />
+    <Content Include="Content\js\lib\plugins\sammy.pure.js" />
+    <Content Include="Content\js\lib\plugins\sammy.push_location_proxy.js" />
+    <Content Include="Content\js\lib\plugins\sammy.storage.js" />
+    <Content Include="Content\js\lib\plugins\sammy.template.js" />
+    <Content Include="Content\js\lib\plugins\sammy.title.js" />
+    <Content Include="Content\js\lib\plugins\sammy.tmpl.js" />
+    <Content Include="Content\js\lib\sammy.js" />
     <Content Include="Global.asax" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
