--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -71,7 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\LogModel.cs" />
-    <Compile Include="Module\AgentModule.cs" />
+    <Compile Include="Module\ApiModule.cs" />
     <Compile Include="Module\AssetModule.cs" />
     <Compile Include="Module\CommandNotFoundInRegistryException.cs" />
     <Compile Include="Module\LogModule.cs" />
@@ -82,7 +82,7 @@
     <Compile Include="Models\CompositeHome.cs" />
     <Compile Include="Models\PublishedCommandModel.cs" />
     <Compile Include="Module\CommandModule.cs" />
-    <Compile Include="Module\CompositeModule.cs" />
+    <Compile Include="Module\UserInterfaceModule.cs" />
     <Compile Include="Module\QueryModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Binders\InputModelBinder.cs" />
@@ -97,11 +97,20 @@
     <EmbeddedResource Include="Views\Shared\_Layout.cshtml" />
     <EmbeddedResource Include="Views\Commands\view-publication-record.cshtml" />
     <EmbeddedResource Include="Views\Log\logs.cshtml" />
-    <EmbeddedResource Include="Views\Composite\view-agent-hb.cshtml" />
+    <EmbeddedResource Include="Views\view-agent.cshtml" />
     <EmbeddedResource Include="Views\Queries\view-query-metadata.cshtml" />
-    <EmbeddedResource Include="Views\Composite\read-model.cshtml" />
-    <EmbeddedResource Include="Views\Composite\form-container.cshtml" />
-    <EmbeddedResource Include="Views\Composite\publication-record.cshtml" />
+    <EmbeddedResource Include="Views\Templates\read-model.cshtml" />
+    <EmbeddedResource Include="Views\Templates\form-container.cshtml" />
+    <EmbeddedResource Include="Views\Templates\publication-record.cshtml" />
+    <EmbeddedResource Include="Views\Templates\commands.cshtml" />
+    <EmbeddedResource Include="Views\Templates\queries.cshtml" />
+    <EmbeddedResource Include="Views\Templates\read-models.cshtml" />
+    <EmbeddedResource Include="Views\Templates\agent.cshtml" />
+    <EmbeddedResource Include="Views\view-composite.cshtml" />
+    <EmbeddedResource Include="Views\Templates\composite.cshtml" />
+    <EmbeddedResource Include="Views\Templates\input-models.cshtml" />
+    <EmbeddedResource Include="Views\Templates\input-model.cshtml" />
+    <EmbeddedResource Include="Views\Templates\agents.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\common\Euclid.Common.Storage\Euclid.Common.Storage.csproj">
@@ -127,6 +136,10 @@
     <ProjectReference Include="..\..\framework\Euclid.Framework\Euclid.Framework.csproj">
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
       <Name>Euclid.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Euclid.Composites.Mvc\Euclid.Composites.Mvc.csproj">
+      <Project>{F0842E3B-1F25-4D42-B25D-758B8FCBDCC3}</Project>
+      <Name>Euclid.Composites.Mvc</Name>
     </ProjectReference>
     <ProjectReference Include="..\Euclid.Composites\Euclid.Composites.csproj">
       <Project>{12029AA6-F05C-4DC6-B76E-C3798BCAC68D}</Project>
